--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Flamenco:wght@300;400&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpeg" href="/toca.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Verificação do Google -->
+    <meta name="google-site-verification" content="Hp-8a9d9XMd8dLA7z2N-x6Yr6fNpLksDGy6_JsSkM0M" />
     <title>Toca dos Tatus</title>
   </head>
   <body>
