--- a/index.html
+++ b/index.html
@@ -2,16 +2,36 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Flamenco:wght@300;400&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" type="image/jpeg" href="/toca.jpeg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- Verificação do Google -->
     <meta name="google-site-verification" content="Hp-8a9d9XMd8dLA7z2N-x6Yr6fNpLksDGy6_JsSkM0M" />
+
+    <!-- SEO -->
     <title>Toca dos Tatus</title>
+    <meta name="description" content="A Toca dos Tatus é um lar de amor e esperança para gatinhos resgatados em Curitiba. Saiba como adotar, voluntariar ou apoiar nossa causa.">
+
+    <meta name="robots" content="index, follow">
+
+    <!-- Social Media -->
+    <meta property="og:title" content="Toca dos Tatus - Resgate de Gatinhos em Curitiba">
+    <meta property="og:description" content="Apoie nossa causa e conheça os gatinhos resgatados.">
+    <meta property="og:image" content="/toca.jpeg">
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
